--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       .color span {
         color: rgb(79, 216, 5);
       }
-      h1 {
+      h1, .depart {
         color: rgb(214, 245, 200);
+      }
+      .depart {
+        color: rgb(5, 5, 252);
       }
       h2 {
         background: url("bg.png") no-repeat center;
@@ -36,18 +39,19 @@
   </head>
   <body>
     <!-- Exam Title -->
-    <h1 class="mt-5">Noakhali Science and Technology University</h1>
+    <h1 class="mt-2">Noakhali Science and Technology University<h2 class="depart mt-5">Department of English <br> Course Title: New Literatures in English <br />
+      Course Code: 4109</h2></h1>
     <br />
+    
 
     <!-- Time to Left -->
-    <h2>
-      Course Title: New Literature <br />
-      Course Code: 4107 <br />
-      Our Next Exam will be held
+    <h2 class="course">
+      
+      Our Next Exam Time Left
     </h2>
     <br />
 
-    <div class="container mt-5">
+    <div class="container">
       <div class="row fs-3">
         <div class="col shadow color">
           <div>
