--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       }
       h2 {
         background: url("bg.png") no-repeat center;
-        padding: 10px 0px;
+        padding: 10px 10px;
+        background-size: 1000px;
       }
     </style>
     <link
